src/test/deca/context/invalid/created/affect_NULL/FLOAT.deca
// Description:
//		Affecter null a un float
// Resultats:
//		Erreur contexte Ligne 7 : Types don't match!

{
	float x = null;
}
